@@ -5,6 +5,8 @@ version <next>:
 - v360 filter
 - Intel QSV-accelerated MJPEG decoding
 - Intel QSV-accelerated VP9 decoding
+- support for TrueHD in mp4
+
 
 version 4.2:
 - tpad filter
